# ERCOTMarketMaker

./: .gitignore  CMakeLists.txt  README.md
Documentation/: ARCHITECTURE_NOTES.md  PHASE_1.md  PHASE_2.md  ROADMAP-Phase2-Task1.md  ROADMAP.md
hardware/: basys3_bridge.xdc  fpga_bridge_top.sv  lob_array.sv  lob_pe.sv  mdp3_parser.sv  mdp3_payload_decoder.sv  tb_fpga_bridge_top.sv  tb_lob_array.sv  tb_lob_pe.sv  tb_mdp3_parser.sv  tb_mdp3_payload_decoder.sv  tb_uart_loopback.sv  tob_serializer.sv  uart_rx.sv  uart_tx.sv
include/ipc/: ErcotTelemetry.hpp  HandshakeRegion.hpp  MarketDataChannel.hpp  MarketDataTick.hpp  SPSCQueue.hpp  SharedMemoryManager.hpp  UartFraming.hpp
scripts/: run_sim.sh
src/: consumer.cpp  mac_uart_bridge.cpp  md_consumer.cpp  producer.cpp
tests/: uart_bridge_pty_test.cpp
